<resources>
    <string name="app_name" translatable="false">Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="action_per_color_settings">Per color settings</string>
    <string name="action_expand">Expand</string>
    <string name="action_delete_group">Delete group</string>
    <string name="action_delete_item">Delete item</string>
    <string name="action_drag_item">Drag item</string>
    <string name="home_fragment_label" translatable="false">Home Fragment</string>
    <string name="global_settings_dialog_fragment_label" translatable="false">Settings dialog fragment</string>
    <string name="sorting_settings_dialog_fragment_label" translatable="false">Sorting settings dialog fragment</string>
    <string name="calendar_settings_dialog_fragment_label" translatable="false">Calendar settings dialog fragment</string>
    <string name="add_edit_entry_dialog_fragment_label" translatable="false">Add/edit entry dialog fragment</string>
    <string name="add_edit_group_dialog_fragment_label" translatable="false">Add/edit group dialog fragment</string>
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="please_read_the_notes" type="id">Please read the notes</string>
    <string name="settings_state_symbol" translatable="false">⬧</string>
    <string name="calendar_event_all_day">All day</string>
    <string name="permission_granted">Granted</string>
    <string name="permission_state_unknown">Unknown</string>
    <string name="permission_not_granted">Not granted</string>
    <string name="grant_permissions">Grant</string>
    <string name="service_name">Background updater service</string>
    <string name="service_description">Service to update your lock screen background</string>
    <string name="file_access">Access to files</string>
    <string name="file_access_description">For reading and saving backgrounds from lock screen</string>
    <string name="calendar_access">Access to calendar</string>
    <string name="calendar_access_description">For sync with system calendars</string>
    <string name="ignore_battery_optimization">Ignore battery optimization</string>
    <string name="ignore_battery_optimization_description">(optional) For the background service to work reliably, don\'t worry, it won\'t consume much energy</string>
    <string name="ignore_autorevoke">Don’t auto-revoke permissions</string>
    <string name="ignore_autorevoke_description">(optional) As the app mostly works in the background, Android may think that you are not using it and revoke permissions, add the app to exclusion list to avoid random breakages</string>
    <string name="autorevoke_request_description">Find a setting called “Remove permissions (pause activity) if app is unused”</string>
    <string name="notification_permission">Notifications</string>
    <string name="notification_permission_description">(optional) For showing service status notification</string>
    <string name="permission_request_description">Please grant permissions for the app to properly function</string>
    <string name="permission_request">Permission request</string>
    <plurals name="calendar_event_count">
        <item quantity="one">One event</item>
        <item quantity="other">%d events</item>
    </plurals>
    <string name="title_color_default">Calendar color</string>
    <string name="add_event_fab">Add event</string>
    <string name="settings_lockscreen_background">Lock screen background settings</string>
    <string name="settings_adaptive_color_balance">Blend with background: %s</string>
    <string name="settings_show_events">Show events</string>
    <plurals name="settings_after_n_days">
        <item quantity="one">after %d day</item>
        <item quantity="other">after %d days</item>
    </plurals>
    <plurals name="settings_in_n_days">
        <item quantity="one">in %d day</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <string name="settings_bg_color">Background</string>
    <string name="settings_border_color">Border</string>
    <string name="settings_text_color">Font</string>
    <string name="settings_reset_bg">Reset backgrounds</string>
    <string name="settings_reset_to_defaults">Reset settings</string>
    <string name="name">Name</string>
    <string name="title">Event name</string>
    <string name="yes">Yes</string>
    <string name="off">Off</string>
    <string name="settings_current_border_thickness">Current events border thickness: %s</string>
    <string name="settings_border_thickness">Border thickness: %s</string>
    <string name="settings_upcoming_border_thickness">Upcoming events border thickness: %s</string>
    <string name="settings_expired_border_thickness">Expired events border thickness: %s</string>
    <string name="settings_show_items_lock">Show on lock screen</string>
    <string name="settings_show_global_items_lock">Show global events on lock screen</string>
    <string name="settings_priority">Priority: %d</string>
    <string name="settings_font_size">Font size (lock screen): %d</string>
    <string name="settings_effects_title">Additional effects</string>
    <string name="settings_effects_description">Add some visual flare! Note: these effects are experimental and may not work on all devices</string>
    <string name="settings_effects_transparency">Background transparency: %s%%</string>
    <string name="settings_effects_blur_radius">Blur radius: %spx</string>
    <string name="settings_effects_blur_grain">Blur grain: %s%%</string>
    <string name="save">Save</string>
    <string name="reset_settings_prompt">Reset settings?</string>
    <string name="rename_prompt">Rename?</string>
    <string name="overwrite_prompt">Overwrite?</string>
    <string name="no">No</string>
    <plurals name="item_N_days_ago">
        <item quantity="one">(%d day ago)</item>
        <item quantity="other">(%d days ago)</item>
    </plurals>
    <string name="item_more_than_a_month_ago">(> than a month ago)</string>
    <string name="item_yesterday">(Yesterday)</string>
    <string name="item_tomorrow">(Tomorrow)</string>
    <plurals name="item_in_N_days">
        <item quantity="one">(in %d day)</item>
        <item quantity="other">(in %d days)</item>
    </plurals>
    <string name="item_in_more_than_in_a_month">(> than in a month)</string>
    <string name="item_global">(Global)</string>
    <string name="group_with_same_name_exists">A group with the same name already exists</string>
    <string name="group">Group</string>
    <string name="enable_per_day_wallpapers">Enable per day wallpapers</string>
    <string name="dynamic_wallpaper_off_warning">You have selected a wallpaper for a single day but “per day wallpapers” is not enabled</string>
    <string name="edit_group">Edit group</string>
    <string name="no_description">This event has no description</string>
    <string name="edit_group_message">The group will be renamed, no parameters will be changed</string>
    <string name="add_group">Add group</string>
    <string name="null_group_edit_message">Nothing to edit, assign a group first</string>
    <string name="delete">Delete</string>
    <string name="choose_color">Choose color</string>
    <string name="category_event_visibility">Event visibility</string>
    <string name="category_system_calendars">System calendar integration</string>
    <string name="category_lockscreen_appearance">Lockscreen appearance</string>
    <string name="category_application_settings">Application</string>
    <string name="category_sorting_settings">Order of events</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="apply">Apply</string>
    <string name="event_name_input_hint">Event</string>
    <string name="add">Add</string>
    <string name="add_current_config_as_group_prompt">Add current configuration as a group?</string>
    <string name="add_current_config_as_group_message">Parameters marked with green or blue rhombs (manually edited) will be added to the group</string>
    <string name="settings_max_rWidth_lock">Stretch event background to fill lock screen width</string>
    <string name="delete_all_saved_backgrounds_prompt">Delete all saved backgrounds?</string>
    <string name="first_weekday">First day of the week</string>
    <string name="day_default">Default</string>
    <string name="background_service_persistent_message">Background service running</string>
    <string name="last_update_time">Last update: %s</string>
    <string name="settings_colors">Colors</string>
    <string name="settings_preview_current">Current</string>
    <string name="settings_preview_expired">Expired</string>
    <string name="settings_preview_upcoming">Upcoming</string>
    <string name="settings_hide_expired_events_by_time">Hide passed events on lockscreen (by time)</string>
    <string name="status">Date: %s  Events: %d</string>
    <string name="app_theme">App theme</string>
    <string name="import_export_settings">Import/export settings</string>
    <string name="import_settings_description">Import application settings</string>
    <string name="export_settings_description">Export application settings</string>
    <string name="export_settings_successful">Export successful</string>
    <string name="export_settings_failed">Export failed</string>
    <string name="export_settings_canceled">Export cancelled</string>
    <string name="import_settings_successful">Import successful</string>
    <string name="import_settings_canceled">Import canceled</string>
    <string name="import_settings_failed">Import failed</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_system">System default</string>
    <string name="xiaomi_message">It looks like you are using a xiaomi phone, some version of miui don\'t allow setting lockscreen wallpaper programmatically, so the app will most probably not work. Sorry, i can\'t do anything about it.</string>
    <string name="blank_group_name">No group</string>
    <string name="input_cant_be_empty">Input can’t be empty</string>
    <string name="edit_event">Edit event</string>
    <string name="overwrite">Overwrite</string>
    <string name="rename">Rename</string>
    <string name="reset">Reset</string>
    <string name="hide_by_content">Hide by content</string>
    <string name="separate_multiple_statements_by">Separate multiple statements by ||</string>
    <string name="content">Content</string>
    <string name="editing_system_calendar">%1$s in %2$s</string>
    <string name="editing_system_calendar_color">Events with color: ■ from %1$s in %2$s</string>
    <string name="calendar_main">Main</string>
    <string name="all_set">All set!</string>
    <string name="thanks_for_installing">Thanks for installing Scheduler</string>
    <string name="choose_application_theme">Choose application theme</string>
    <string name="change_theme_later">You will be able to change it later</string>
    <string name="a_few_notes">A few notes before you go</string>
    <string name="note_animated_wallpapers">The app doesn’t work with animated wallpapers, so if you have one consider either not using the app or setting a regular wallpaper</string>
    <string name="note_bugs">The app is still in it’s early development so bugs are to be expected</string>
    <string name="note_contribute">If you have any suggestions or want to contribute, please kindly do so on GitHub</string>
    <string name="finish">Finish</string>
    <string name="before_you_continue">Before you continue</string>
    <string name="read_and_understood">I have read and understood all the things above</string>
    <string name="select_view">Select view</string>
    <string name="select_view_description">Choose how items will look on your lockscreen</string>
</resources>