<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_request"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_request_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:contentDescription="@string/calendar_access_description"
                app:srcCompat="@drawable/ic_calendar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar_access"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar_access_description" />

                <TextView
                    android:id="@+id/calendar_permission_granted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permissions_not_granted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/color_permission_not_granted" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:contentDescription="@string/file_access_description"
                app:srcCompat="@drawable/ic_folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_access"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_access_description" />

                <TextView
                    android:id="@+id/storage_permission_granted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permissions_not_granted"
                    android:textColor="@color/color_permission_not_granted" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/grant_permissions_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/permissions_grant"
            android:textColor="#352B4A" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>